my final project

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,3 +2,18 @@
 #admin-page {
   padding-top: 0px;
 }
+
+
+#nested-comment{
+
+  margin-top:60px;
+
+
+}
+
+.comment-reply {
+
+  display: none;
+
+
+}
