--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,2 +1,10 @@
-#admin-page{padding-top:0}
+#admin-page {
+  padding-top: 0px; }
+
+#nested-comment {
+  margin-top: 60px; }
+
+.comment-reply {
+  display: none; }
+
 /*# sourceMappingURL=app.css.map */
